<?xml version="1.0"?>
<package format="2">
  <name>refills_counting</name>
  <version>0.0.1</version>
  <description>The refills_counting package</description>

  <maintainer email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>refills_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>

  <export>
  </export>
</package>
